--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -131,7 +131,7 @@
                 <span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
               </div>
 
-              <img src="assets/listing-03.jpg" alt="">
+              <img src="/assets/listing-03.jpg" alt="">
 
             </a>
 
