--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,48 +1,75 @@
-<section class="road-map">
+<div id="footer" class="sticky-footer">
+  <!-- Main -->
   <div class="container">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-3">
         <h4>Popular Countries</h4>
-        <ul class="list-group">
-          <li class="list-group-item"><%= link_to "United States", "" %></li>
-          <li class="list-group-item"><%= link_to "China", "" %></li>
-          <li class="list-group-item"><%= link_to "United Kingdom", "" %></li>
+        <ul class="footer-links">
+          <li><a href="#">United States</a></li>
+          <li><a href="#">China</a></li>
+          <li><a href="#">France</a></li>
+          <li><a href="#">United Kingdom</a></li>
         </ul>
+        <div class="clearfix"></div>
       </div>
-      <div class="col-sm-3">
-        <h4>Popular Regions</h4>
-        <ul class="list-group">
-          <li class="list-group-item"><%= link_to "United States", "" %></li>
-          <li class="list-group-item"><%= link_to "China", "" %></li>
-          <li class="list-group-item"><%= link_to "Fance", "" %></li>
-        </ul>
-      </div>
-      <div class="col-sm-3">
-        <h4>Popular Cities</h4>
-      </div>
-      <div class="col-sm-3">
-        <h4>Property Types</h4>
-      </div>
-    </div>
-  </div>
-</section>
 
-<footer class="footer">
-  <nav class="navbar">
-    <div class="container">
-      <ul class="nav navbar-nav navbar-left">
-        <li><%= link_to "About Us", "" %></li>
-        <li><%= link_to "Adverties", "" %></li>
-        <li><%= link_to "Terms and service", "" %></li>
-        <li><%= link_to "Policy", "" %></li>
-        <li><%= link_to "Contact Us", "" %></li>
-      </ul>
-      <ul class="nav navbar-nav socials navbar-right">
-        <li><a><i class='fa fa-facebook-f'></i></a></li>
-        <li><a><i class='fa fa-twitter'></i></a></li>
-        <li><a><i class='fa fa-instagram'></i></a></li>
-        <li><a><i class='fa fa-youtube'></i></a></li>
-      </ul>
+      <div class="col-md-3">
+        <h4>Popular Regions</h4>
+        <ul class="footer-links">
+          <li><a href="#">Toscana</a></li>
+          <li><a href="#">Illinois</a></li>
+          <li><a href="#">Burgundy</a></li>
+          <li><a href="#">Lorraine</a></li>
+        </ul>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="col-md-3">
+        <h4>Popular Cities</h4>
+        <ul class="footer-links">
+          <li><a href="#">New York</a></li>
+          <li><a href="#">London</a></li>
+          <li><a href="#">Paris</a></li>
+          <li><a href="#">Istanbul</a></li>
+        </ul>
+        <div class="clearfix"></div>
+      </div>
+
+      <div class="col-md-3">
+        <h4>Propery Types</h4>
+        <ul class="footer-links">
+          <li><a href="#">House</a></li>
+          <li><a href="#">Appartment</a></li>
+          <li><a href="#">Condo</a></li>
+          <li><a href="#">Town House</a></li>
+        </ul>
+        <div class="clearfix"></div>
+      </div>
     </div>
-  </nav>
-</footer>
+
+    <!-- Copyright -->
+    <div class="row copyrights">
+      <div class="col-md-8">
+        <nav id="navigation" class="style-1">
+          <ul id="responsive">
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">Adverties</a></li>
+            <li><a href="#">Terms and service</a></li>
+            <li><a href="#">Policy</a></li>
+            <li><a href="#">Contact Us</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="col-md-4">
+        <ul class="social-icons pull-right">
+          <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
+          <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
+          <li><a class="vimeo" href="#"><i class="icon-vimeo"></i></a></li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
+
+</div>
