--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "btn btn-normal btn-block" %>
+        <%= f.submit "Sign up", class: "btn btn-normal btn-block btn-login" %>
       </div>
     <% end %>
     <br/>
