--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -56,7 +56,7 @@
           </div>
         </div>
 
-        <div><%= f.submit "Create My Property", class: "btn btn-normal" %></div>
+        <div><%= f.submit "Create My Property", class: "btn btn-normal btn-login" %></div>
 
       <% end %>
 
