--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -31,9 +31,9 @@
               </div>
 
               <div class="listing-carousel">
-                <div><img src="assets/listing-01.jpg" alt=""></div>
-                <div><img src="assets/listing-01b.jpg" alt=""></div>
-                <div><img src="assets/listing-01c.jpg" alt=""></div>
+                <div><img src="/assets/listing-01.jpg" alt=""></div>
+                <div><img src="/assets/listing-01b.jpg" alt=""></div>
+                <div><img src="/assets/listing-01c.jpg" alt=""></div>
               </div>
 
             </a>
@@ -82,7 +82,7 @@
                 <span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
               </div>
 
-              <img src="assets/listing-02.jpg" alt="">
+              <img src="/assets/listing-02.jpg" alt="">
 
             </a>
 
@@ -182,8 +182,8 @@
               </div>
 
               <div class="listing-carousel">
-                <div><img src="assets/listing-04.jpg" alt=""></div>
-                <div><img src="assets/listing-04b.jpg" alt=""></div>
+                <div><img src="/assets/listing-04.jpg" alt=""></div>
+                <div><img src="/assets/listing-04b.jpg" alt=""></div>
               </div>
 
             </a>
@@ -233,7 +233,7 @@
                 <span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
               </div>
 
-              <img src="assets/listing-05.jpg" alt="">
+              <img src="/assets/listing-05.jpg" alt="">
             </a>
 
             <div class="listing-content">
@@ -370,7 +370,7 @@
     <div class="col-md-4">
 
       <!-- Image Box -->
-      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/popular-location-01.jpg">
+      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="/assets/popular-location-01.jpg">
 
         <!-- Badge -->
         <div class="listing-badges">
@@ -388,7 +388,7 @@
     <div class="col-md-8">
 
       <!-- Image Box -->
-      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/popular-location-02.jpg">
+      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="/assets/popular-location-02.jpg">
         <div class="img-box-content visible">
           <h4>Los Angeles</h4>
           <span>24 Properties</span>
@@ -400,7 +400,7 @@
     <div class="col-md-8">
 
       <!-- Image Box -->
-      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/popular-location-03.jpg">
+      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="/assets/popular-location-03.jpg">
         <div class="img-box-content visible">
           <h4>San Francisco </h4>
           <span>12 Properties</span>
@@ -412,7 +412,7 @@
     <div class="col-md-4">
 
       <!-- Image Box -->
-      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="assets/popular-location-04.jpg">
+      <a href="listings-list-with-sidebar.html" class="img-box" data-background-image="/assets/popular-location-04.jpg">
         <div class="img-box-content visible">
           <h4>Miami</h4>
           <span>9 Properties</span>
@@ -442,7 +442,7 @@
 
           <!-- Img -->
           <a href="blog-post.html" class="post-img">
-            <img src="assets/blog-post-01.jpg" alt="">
+            <img src="/assets/blog-post-01.jpg" alt="">
           </a>
 
           <!-- Content -->
@@ -465,7 +465,7 @@
 
           <!-- Img -->
           <a href="blog-post.html" class="post-img">
-            <img src="assets/blog-post-02.jpg" alt="">
+            <img src="/assets/blog-post-02.jpg" alt="">
           </a>
 
           <!-- Content -->
@@ -488,7 +488,7 @@
 
           <!-- Img -->
           <a href="blog-post.html" class="post-img">
-            <img src="assets/blog-post-03.jpg" alt="">
+            <img src="/assets/blog-post-03.jpg" alt="">
           </a>
 
           <!-- Content -->
@@ -511,7 +511,7 @@
 
 
 <!-- Flip banner -->
-<a href="listings-half-map-grid-standard.html" class="flip-banner parallax" data-background="assets/flip-banner-bg.jpg" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
+<a href="listings-half-map-grid-standard.html" class="flip-banner parallax" data-background="/assets/flip-banner-bg.jpg" data-color="#274abb" data-color-opacity="0.9" data-img-width="2500" data-img-height="1600">
   <div class="flip-banner-content">
     <h2 class="flip-visible">We help people and homes find each other</h2>
     <h2 class="flip-hidden">Browse Properties <i class="sl sl-icon-arrow-right"></i></h2>
