--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -2,9 +2,9 @@
   <%= f.hidden_field :is_rent_eq %>
 
   <div class="search-type">
-    <label class="active"><input class="first-tab" name="tab" checked="checked" type="radio">Any Status</label>
-    <label><input name="tab" type="radio">For Sale</label>
-    <label><input name="tab" type="radio">For Rent</label>
+    <label class="<%= params[:q].blank? ? 'active' : '' %>"><input id="tab-all" class="first-tab" name="tab" checked="checked" type="radio">Any Status</label>
+    <label class="<%= (params[:q] && params[:q][:is_rent_eq] == 'false') ? 'active' : '' %>"><input id="tab-buy" name="tab" type="radio">For Sale</label>
+    <label class="<%= (params[:q] && params[:q][:is_rent_eq] == 'true') ? 'active' : '' %>"><input id="tab-rent" name="tab" type="radio">For Rent</label>
     <div class="search-type-arrow"></div>
   </div>
 
@@ -14,23 +14,14 @@
     <!-- Main Search Input -->
     <div class="main-search-input larger-input">
       <%= text_field_tag :search, params[:search], placeholder: "Search by state, suburb or postcode", class: "ico-01", id: "autolocation" %>
-      <!-- <input type="text" class="ico-01" placeholder="Enter address e.g. street, city and state or zip" value=""/> -->
       <button class="button">Search</button>
     </div>
 
     <!-- Row -->
     <div class="row with-forms">
-
       <!-- Property Type -->
       <div class="col-md-4">
-        <select data-placeholder="Any Type" class="chosen-select-no-single" >
-          <option>Any Type</option>
-          <option>Apartments</option>
-          <option>Houses</option>
-          <option>Commercial</option>
-          <option>Garages</option>
-          <option>Lots</option>
-        </select>
+        <%= f.select :accommodate_gteq, Room::ACCOMADATION_TYPES.map{|k, v| [v, k]}, { id: "accommodate_gteq", prompt: "All property types" }, { class: "chosen-select-no-single" } %>
       </div>
 
 
@@ -39,7 +30,7 @@
 
         <!-- Select Input -->
         <div class="select-input">
-          <input type="text" placeholder="Min Price" data-unit="USD">
+          <%= f.text_field :price_gteq, placeholder: "Min Price", "data-unit"=>"USD" %>
         </div>
         <!-- Select Input / End -->
 
@@ -51,7 +42,7 @@
 
         <!-- Select Input -->
         <div class="select-input">
-          <input type="text" placeholder="Max Price" data-unit="USD">
+          <%= f.text_field :price_lteq, placeholder: "Max Price", "data-unit"=>"USD" %>
         </div>
         <!-- Select Input / End -->
 
@@ -101,28 +92,12 @@
 
           <!-- Min Area -->
           <div class="col-md-6">
-            <select data-placeholder="Beds" class="chosen-select-no-single" >
-              <option label="blank"></option>
-              <option>Beds (Any)</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
+            <%= f.select :bed_room_gteq, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]], { id: "bed_room", prompt: "Beds" }, { class: "chosen-select-no-single" } %>
           </div>
 
           <!-- Max Area -->
           <div class="col-md-6">
-            <select data-placeholder="Baths" class="chosen-select-no-single" >
-              <option label="blank"></option>
-              <option>Baths (Any)</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-            </select>
+            <%= f.select :bath_room_gteq, [["1", 1], ["2", 2], ["3", 3], ["4+", 4]], { id: "bath_room", prompt: "Baths" }, { class: "chosen-select-no-single" } %>
           </div>
 
         </div>
@@ -132,27 +107,20 @@
         <!-- Checkboxes -->
         <div class="checkboxes in-row">
 
-          <input id="check-2" type="checkbox" name="check">
+          <input id="check-1" type="checkbox" name="q[is_tv_eq]" value="true">
+          <label for="check-1">TV</label>
+
+          <input id="check-2" type="checkbox" name="q[is_air_eq]" value="true">
           <label for="check-2">Air Conditioning</label>
 
-          <input id="check-3" type="checkbox" name="check">
-          <label for="check-3">Swimming Pool</label>
+          <input id="check-3" type="checkbox" name="q[is_kitchen_eq]" value="true">
+          <label for="check-3">Kitchen</label>
 
-          <input id="check-4" type="checkbox" name="check" >
-          <label for="check-4">Central Heating</label>
+          <input id="check-4" type="checkbox" name="q[is_internet_eq]" value="true">
+          <label for="check-4">Internet</label>
 
-          <input id="check-5" type="checkbox" name="check">
-          <label for="check-5">Laundry Room</label>
-
-
-          <input id="check-6" type="checkbox" name="check">
-          <label for="check-6">Gym</label>
-
-          <input id="check-7" type="checkbox" name="check">
-          <label for="check-7">Alarm</label>
-
-          <input id="check-8" type="checkbox" name="check">
-          <label for="check-8">Window Covering</label>
+          <input id="check-5" type="checkbox" name="q[is_heating_eq]" value="true">
+          <label for="check-5">Central Heating</label>
 
         </div>
         <!-- Checkboxes / End -->
