--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,6 +20,13 @@
             <%= link_to "List my property", new_room_path, style: "color: white; text-decoration: none;" %>
           </button>
         </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            <%= prefered_currency %><span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <%= currency_links("") %>
+          </ul>
+        </li>
 
         <% if !user_signed_in? %>
           <li><%= link_to "Login", new_user_session_path, class: "black" %></li>
