--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -24,7 +24,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <%= prefered_currency %><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <%= currency_links("") %>
+            <%= select_currency_links %>
           </ul>
         </li>
 
