--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -8,33 +8,6 @@
           <!-- map goes here -->
       </div>
 
-      <script>
-        function initialize(rooms) {
-          var location = {lat: 44.5403, lng: -78.5463}
-          if (rooms.length > 0) {
-            location = {lat: rooms[0].latitude, lng: rooms[0].longitude}
-          }
-          var map = new google.maps.Map(document.getElementById('map'), {
-            center: location,
-            zoom: 12
-          });
-          var marker, infowindow;
-          rooms.forEach(function(room){
-            marker = new google.maps.Marker({
-              position: {lat: room.latitude, lng: room.longitude},
-              map: map
-            });
-            infowindow = new google.maps.InfoWindow({
-              content: "<div class='map_price'>$" + room.price + "</div>"
-            });
-            infowindow.open(map, marker);
-          });
-        }
-        google.maps.event.addDomListener(window, 'load', function () {
-          initialize(<%= raw @arrRooms.to_json %>)
-        });
-      </script>
-
     </div>
   </div>
 
@@ -45,282 +18,56 @@
       <!-- Search -->
       <section class="search margin-bottom-30">
 
-        <div class="row">
-          <div class="col-md-12">
-
-            <!-- Title -->
-            <h4 class="search-title">Find Your Home</h4>
-
-            <!-- Form -->
-            <div class="main-search-box no-shadow">
-
-
-              <!-- Row With Forms -->
-              <div class="row with-forms">
-
-                <!-- Main Search Input -->
-                <div class="col-fs-6">
-                  <input type="text" placeholder="Enter address e.g. street, city or state" value=""/>
-                </div>
-
-                <!-- Status -->
-                <div class="col-fs-3">
-                  <select data-placeholder="Any Status" class="chosen-select-no-single" >
-                    <option>Any Status</option>
-                    <option>For Sale</option>
-                    <option>For Rent</option>
-                  </select>
-                </div>
-
-                <!-- Property Type -->
-                <div class="col-fs-3">
-                  <select data-placeholder="Any Type" class="chosen-select-no-single" >
-                    <option>Any Type</option>
-                    <option>Apartments</option>
-                    <option>Houses</option>
-                    <option>Commercial</option>
-                    <option>Garages</option>
-                    <option>Lots</option>
-                  </select>
-                </div>
-
-              </div>
-              <!-- Row With Forms / End -->
-
-
-              <!-- Row With Forms -->
-              <div class="row with-forms">
-
-                <!-- Min Price -->
-                <div class="col-fs-3">
-
-                  <!-- Select Input -->
-                  <div class="select-input disabled-first-option">
-                    <input type="text" placeholder="Min Area" data-unit="Sq Ft">
-                    <select>
-                      <option>Min Area</option>
-                      <option>300</option>
-                      <option>400</option>
-                      <option>500</option>
-                      <option>700</option>
-                      <option>800</option>
-                      <option>1000</option>
-                      <option>1500</option>
-                    </select>
-                  </div>
-                  <!-- Select Input / End -->
-
-                </div>
-
-                <!-- Max Price -->
-                <div class="col-fs-3">
-
-                  <!-- Select Input -->
-                  <div class="select-input disabled-first-option">
-                    <input type="text" placeholder="Max Area" data-unit="Sq Ft">
-                    <select>
-                      <option>Max Area</option>
-                      <option>300</option>
-                      <option>400</option>
-                      <option>500</option>
-                      <option>700</option>
-                      <option>800</option>
-                      <option>1000</option>
-                      <option>1500</option>
-                    </select>
-                  </div>
-                  <!-- Select Input / End -->
-
-                </div>
-
-
-                <!-- Min Price -->
-                <div class="col-fs-3">
-
-                  <!-- Select Input -->
-                  <div class="select-input disabled-first-option">
-                    <input type="text" placeholder="Min Price" data-unit="USD">
-                    <select>
-                      <option>Min Price</option>
-                      <option>1 000</option>
-                      <option>2 000</option>
-                      <option>3 000</option>
-                      <option>4 000</option>
-                      <option>5 000</option>
-                      <option>10 000</option>
-                      <option>15 000</option>
-                      <option>20 000</option>
-                      <option>30 000</option>
-                      <option>40 000</option>
-                      <option>50 000</option>
-                      <option>60 000</option>
-                      <option>70 000</option>
-                      <option>80 000</option>
-                      <option>90 000</option>
-                      <option>100 000</option>
-                      <option>110 000</option>
-                      <option>120 000</option>
-                      <option>130 000</option>
-                      <option>140 000</option>
-                      <option>150 000</option>
-                    </select>
-                  </div>
-                  <!-- Select Input / End -->
-
-                </div>
-
-
-                <!-- Max Price -->
-                <div class="col-fs-3">
-
-                  <!-- Select Input -->
-                  <div class="select-input disabled-first-option">
-                    <input type="text" placeholder="Max Price" data-unit="USD">
-                    <select>
-                      <option>Max Price</option>
-                      <option>1 000</option>
-                      <option>2 000</option>
-                      <option>3 000</option>
-                      <option>4 000</option>
-                      <option>5 000</option>
-                      <option>10 000</option>
-                      <option>15 000</option>
-                      <option>20 000</option>
-                      <option>30 000</option>
-                      <option>40 000</option>
-                      <option>50 000</option>
-                      <option>60 000</option>
-                      <option>70 000</option>
-                      <option>80 000</option>
-                      <option>90 000</option>
-                      <option>100 000</option>
-                      <option>110 000</option>
-                      <option>120 000</option>
-                      <option>130 000</option>
-                      <option>140 000</option>
-                      <option>150 000</option>
-                    </select>
-                  </div>
-                  <!-- Select Input / End -->
-
-                </div>
-
-              </div>
-              <!-- Row With Forms / End -->
-
-
-              <!-- Search Button -->
-              <button class="button fs-map-btn">Update</button>
-
-              <!-- More Search Options -->
-              <a href="#" class="more-search-options-trigger margin-top-20" data-open-title="More Options" data-close-title="Less Options"></a>
-
-              <div class="more-search-options relative">
-                <div class="more-search-options-container margin-top-30">
-
-                  <!-- Row With Forms -->
-                  <div class="row with-forms">
-
-                    <!-- Age of Home -->
-                    <div class="col-fs-3">
-                      <select data-placeholder="Age of Home" class="chosen-select-no-single" >
-                        <option label="blank"></option>
-                        <option>Age of Home (Any)</option>
-                        <option>0 - 1 Years</option>
-                        <option>0 - 5 Years</option>
-                        <option>0 - 10 Years</option>
-                        <option>0 - 20 Years</option>
-                        <option>0 - 50 Years</option>
-                        <option>50 + Years</option>
-                      </select>
-                    </div>
-
-                    <!-- Rooms Area -->
-                    <div class="col-fs-3">
-                      <select data-placeholder="Rooms" class="chosen-select-no-single" >
-                        <option label="blank"></option>
-                        <option>Rooms (Any)</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                      </select>
-                    </div>
-
-                    <!-- Min Area -->
-                    <div class="col-fs-3">
-                      <select data-placeholder="Beds" class="chosen-select-no-single" >
-                        <option label="blank"></option>
-                        <option>Beds (Any)</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                      </select>
-                    </div>
-
-                    <!-- Max Area -->
-                    <div class="col-fs-3">
-                      <select data-placeholder="Baths" class="chosen-select-no-single" >
-                        <option label="blank"></option>
-                        <option>Baths (Any)</option>
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                      </select>
-                    </div>
-
-                  </div>
-                  <!-- Row With Forms / End -->
-
-
-                  <!-- Checkboxes -->
-                  <div class="checkboxes in-row">
-
-                    <input id="check-2" type="checkbox" name="check">
-                    <label for="check-2">Air Conditioning</label>
-
-                    <input id="check-3" type="checkbox" name="check">
-                    <label for="check-3">Swimming Pool</label>
-
-                    <input id="check-4" type="checkbox" name="check" >
-                    <label for="check-4">Central Heating</label>
-
-                    <input id="check-5" type="checkbox" name="check">
-                    <label for="check-5">Laundry Room</label>
-
-
-                    <input id="check-6" type="checkbox" name="check">
-                    <label for="check-6">Gym</label>
-
-                    <input id="check-7" type="checkbox" name="check">
-                    <label for="check-7">Alarm</label>
-
-                    <input id="check-8" type="checkbox" name="check">
-                    <label for="check-8">Window Covering</label>
-
-                  </div>
-                  <!-- Checkboxes / End -->
-
-                </div>
-
-              </div>
-              <!-- More Search Options / End -->
-
-
-            </div>
-            <!-- Box / End -->
-          </div>
-        </div>
+        <%= render 'shared/search_form' %>
 
       </section>
       <!-- Search / End -->
+
+      <!-- Sorting / Layout Switcher -->
+      <div class="row fs-switcher">
+
+        <div class="col-md-6">
+          <!-- Showing Results -->
+          <p class="showing-results"><%= @arrRooms.size %> Results Found </p>
+        </div>
+
+        <div class="col-md-6">
+          <!-- Layout Switcher -->
+          <div class="layout-switcher">
+            <a href="#" class="list"><i class="fa fa-th-list"></i></a>
+            <a href="#" class="grid"><i class="fa fa-th-large"></i></a>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
 
 </div>
+
+<script>
+  function initialize(rooms) {
+    var location = {lat: 44.5403, lng: -78.5463}
+    if (rooms.length > 0) {
+      location = {lat: rooms[0].latitude, lng: rooms[0].longitude}
+    }
+    var map = new google.maps.Map(document.getElementById('map'), {
+      center: location,
+      zoom: 12
+    });
+    var marker, infowindow;
+    rooms.forEach(function(room){
+      marker = new google.maps.Marker({
+        position: {lat: room.latitude, lng: room.longitude},
+        map: map
+      });
+      infowindow = new google.maps.InfoWindow({
+        content: "<div class='map_price'>$" + room.price + "</div>"
+      });
+      infowindow.open(map, marker);
+    });
+  }
+  google.maps.event.addDomListener(window, 'load', function () {
+    initialize(<%= raw @arrRooms.to_json %>)
+  });
+</script>
