update search results

--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -108,22 +108,22 @@
         <!-- Checkboxes -->
         <div class="checkboxes in-row">
 
-          <%= f.check_box :is_tv_eq, { id: 'check-1' }, "true", "false" %>
+          <%= f.check_box :is_tv_eq, { id: 'check-1' }, "true", "" %>
           <label for="check-1">TV</label>
 
-          <%= f.check_box :is_air_eq, { id: 'check-2' }, "true", "false" %>
+          <%= f.check_box :is_air_eq, { id: 'check-2' }, "true", "" %>
           <!-- <input id="check-2" type="checkbox" name="q[is_air_eq]" value="true"> -->
           <label for="check-2">Air Conditioning</label>
 
-          <%= f.check_box :is_kitchen_eq, { id: 'check-3' }, "true", "false" %>
+          <%= f.check_box :is_kitchen_eq, { id: 'check-3' }, "true", "" %>
           <!-- <input id="check-3" type="checkbox" name="q[is_kitchen_eq]" value="true"> -->
           <label for="check-3">Kitchen</label>
 
-          <%= f.check_box :is_internet_eq, { id: 'check-4' }, "true", "false" %>
+          <%= f.check_box :is_internet_eq, { id: 'check-4' }, "true", "" %>
           <!-- <input id="check-4" type="checkbox" name="q[is_internet_eq]" value="true"> -->
           <label for="check-4">Internet</label>
 
-          <%= f.check_box :is_heating_eq, { id: 'check-5' }, "true", "false" %>
+          <%= f.check_box :is_heating_eq, { id: 'check-5' }, "true", "" %>
           <!-- <input id="check-5" type="checkbox" name="q[is_heating_eq]" value="true"> -->
           <label for="check-5">Central Heating</label>
 
