--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -40,6 +40,58 @@
         </div>
       </div>
 
+      <!-- Listings -->
+      <div class="listings-container list-layout row fs-listings">
+
+
+        <% @arrRooms.each do |room| %>
+
+          <!-- Listing Item -->
+          <div class="listing-item">
+
+            <a href="<%= room_path(room) %>" class="listing-img-container">
+
+              <div class="listing-img-content">
+                <span class="listing-price">$900 <i>monthly</i></span>
+                <span class="like-icon with-tip" data-tip-content="Add to Bookmarks"></span>
+                <span class="compare-button with-tip" data-tip-content="Add to Compare"></span>
+              </div>
+
+              <%= image_tag room.cover_photo(:medium) %>
+
+            </a>
+
+            <div class="listing-content">
+
+              <div class="listing-title">
+                <h4><a href="<%= room_path(room) %>"><%= room.listing_name %></a></h4>
+                <a href="https://maps.google.com/maps?q=221B+Baker+Street,+London,+United+Kingdom&hl=en&t=v&hnear=221B+Baker+St,+London+NW1+6XE,+United+Kingdom" class="listing-address popup-gmaps">
+                  <i class="fa fa-map-marker"></i>
+                  <%= room.address %>
+                </a>
+
+                <a href="<%= room_path(room) %>" class="details button border">Details</a>
+              </div>
+
+              <ul class="listing-details">
+                <li><%= pluralize(room.bed_room, "Bedroom") %></li>
+                <li><%= pluralize(room.bath_room, "Bathroom") %></li>
+              </ul>
+
+              <div class="listing-footer">
+                <a href="#"><i class="fa fa-user"></i> <%= room.user&.fullname %></a>
+                <span><i class="fa fa-calendar-o"></i> <%= (DateTime.current.to_date - room.created_at.to_date).to_i %> days ago</span>
+              </div>
+
+            </div>
+
+          </div>
+          <!-- Listing Item / End -->
+
+        <% end %>
+
+      </div>
+
     </div>
   </div>
 
