--- a/app/views/pages/overview.html.erb
+++ b/app/views/pages/overview.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-3">
     <div class="center">
-      <%= image_tag avatar_url(current_user), class: "avatar-full" %>
+      <%#= image_tag avatar_url(current_user), class: "avatar-full" %>
     </div>
     <div class="panel panel-default">
       <div class="panel-heading"><%= current_user.fullname %></div>
