--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -15,6 +15,8 @@
               <%= label_tag 'type[house]','house' %>
               <%= check_box_tag 'type[land]' %>
               <%= label_tag 'type[land]','land' %>
+              <%= check_box_tag 'type[villa]' %>
+              <%= label_tag 'type[villa]','villa' %>
             </div>
           </div>
         </span>
@@ -23,8 +25,10 @@
 </div>
 
 <div class="row">
-<% @rooms.each do |room| %>
-  <%= room.listing_name %>
+<% @properties.each do |property| %>
+  <%= property.name %>
+  <%= property.type %>
+  <%= property.availability %>
   <br>
 <% end %>
 </div>
